💄 Fixed home cover overflows on small screens

--- a/projects/demo/src/app/components/home/home.component.scss
+++ b/projects/demo/src/app/components/home/home.component.scss
@@ -1,7 +1,16 @@
-.cover {
-    background: url(/assets/cover.jpg);
-    background-size: cover;
-    filter: brightness(.5) grayscale(1);
+.cover::before {
+    content            : '';
+    position           : absolute;
+    top                : 0;
+    bottom             : 0;
+    left               : 0;
+    right              : 0;
+    z-index            : -1;
+    background         : url(/assets/cover.jpg);
+    background-size    : cover;
+    background-position: center center;
+    background-repeat  : no-repeat;
+    filter             : brightness(.5) grayscale(1);
 }
 
 .demos {
