--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -5,7 +5,7 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .fill-screen-v {
-    height: calc(100vh - 70px);
+    min-height: calc(100vh - 70px);
 }
 
 .box {
